--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "dependencies": {
     "nuxt": "^4.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "vitest": "^3.2.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   }
