--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "dependencies": {
     "nuxt": "^4.0.0",
@@ -19,5 +19,8 @@
     "vue-router": "^4.5.1",
     "@tailwindcss/vite": "^4.1.11",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.19.2"
   }
 }
