--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "bun lint:prettier",
+    "lint:prettier": "prettier . --check",
+    "lint:fix": "prettier --write --list-different ."
   },
   "dependencies": {
     "nuxt": "^4.0.0",
@@ -21,6 +24,8 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "^3.19.2"
+    "@nuxt/test-utils": "^3.19.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   }
 }
